# CSE-blabla

./: .buildinfo  .gitmodules  CMakeLists.txt  FastCSErious.html  ODEtoCSE.html  README.md  config.json  fast-caches.html  fast-parallelization.html  fast-pipelining.html  genindex.html  index.html  index.json  intro.html  myst.search.json  myst.xref.json  objects.inv  ode-RK.html  ode-appl.html  ode-autodiff.html  ode-crank.html  ode-implicit.html  ode-improved.html  ode-newton.html  search.html  searchindex.js  setup.py
.github/workflows/: deploy.yml
_sources/: fast-caches.md  fast-parallelization.md  installation.md  ode-RK.md  ode-appl.md  ode-autodiff.md  ode-crank.md  ode-implicit.md  ode-improved.md  ode-newton.md
demos/: CMakeLists.txt  demo_matrix.cpp  demo_tasks.cpp  demo_vector.cpp  test_lapack.cpp
docs/: FastCSErious.md  ODEtoCSE.md  _config.yml  _toc.yml  fast-pipelining.md  intro.md  ode-autodiff.md  ode-crank.md  ode-implicit.md  ode-improved.md  ode-newton.md
py_demos/: demo_vector.py  timing_matmat.py
src/: bind_bla.cpp  cachemat.hpp  file.txt  lapack_interface.hpp  matexpr.hpp  matrix.hpp  ordering.hpp  test1.py  tile.hpp  vecexpr.hpp  vector.hpp
tests/: CMakeLists.txt  tests_matrix.cpp  tests_vector.cpp
